--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section id="testimonial">
     <div class="container">
       <div class="row">
-        <h1 class="section-title wow fadeInLeft animated" data-wow-delay=".6s">What <br>My<br><span>Inspirations</span></h1>
+        <h1 class="section-title wow fadeInLeft animated" data-wow-delay=".6s">What's <br>My<br><span>Inspirations</span></h1>
         <div id="testimonial-carousel" class="carousel slide wow fadeInUp animated" data-ride="carousel" data-wow-delay="1.2s">
           <!-- Indicators -->
           <ol class="carousel-indicators">
