--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SIMBU Personal Portfolio</title>
-
+  <title>🕸️ SIMBU WEBWORKS</title>
+  <link rel="icon" href="assets/img/favicon.ico">
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/jasny-bootstrap.min.css">
@@ -37,7 +37,7 @@
       <div class="col-md-12 top-header">
         <div class="logo-menu">
           <div class="logo pull-left wow fadeInDown animated" data-wow-delay=".2s">
-            <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="assets/img/favicon.ico" alt="logo"></a>
           </div>
           <div class="pull-right wow fadeInDown animated" data-wow-delay=".2">
             <div id="menu" data-toggle="offcanvas" data-target=".navmenu" data-canvas="body">
@@ -102,7 +102,7 @@
   <section id="testimonial">
     <div class="container">
       <div class="row">
-        <h1 class="section-title wow fadeInLeft animated" data-wow-delay=".6s">What's <br>My<br><span>Inspirations</span></h1>
+        <h1 class="section-title wow fadeInLeft animated" data-wow-delay=".6s">What <br>My<br><span>Inspiration</span></h1>
         <div id="testimonial-carousel" class="carousel slide wow fadeInUp animated" data-ride="carousel" data-wow-delay="1.2s">
           <!-- Indicators -->
           <ol class="carousel-indicators">
@@ -124,7 +124,8 @@
                     <div class="info">
                       <p>If you want to walk fast walk alone but if you want to walk far walk together</p>
                       <h4>Ratan Tata</h4>
-                      <h5>CEO, Tata Motors</h5>
+                      <h5>CEO, Tata Groups</h5>
+                      <p>(One of the best human :)</p>
                     </div>
                   </div>
                 </div>
@@ -235,8 +236,8 @@
           <div class="blog-large wow fadeInLeft animated"  data-wow-delay="1.2s">
             <img src="assets/img/blog/img1.jpg" alt="">
             <div class="large">
-              <a class="title" href="#">This is Photoshop's vers ion  of Lorem Ipsum. Pro in gravida </a>
-              <p>Nibh vel velit auc tor aliq uet. Aenean sollicitu din, lorem quis biben...</p>
+              <a class="title" href="#">My Interest in Stock Market  </a>
+              <p>From 2022 I used to learn how the stock market works and found some important features in that...</p>
             </div>
           </div>
         </div>
@@ -244,8 +245,8 @@
           <div class="blog-item">
             <img src="assets/img/blog/img2.jpg" alt="">
             <div class="content">
-              <a class="title" href="#">This is Photoshop's vers ion  of Lorem Ipsum. Pro in gravida </a>
-              <p>Nibh vel velit auc tor aliq uet. Aenean sollicitu din, lorem quis biben...</p>
+              <a class="title" href="#">Refresh myself with latest tech</a>
+              <p>It's being a hobby, to learn about latest technology, and how to maintain my Privacy...</p>
             </div>
           </div>
           <div class="blog-item">
@@ -309,7 +310,7 @@
             <ul class="contact-info">
               <li><i class="fa fa-mobile"></i> +91 8270707002</li>
               <li><i class="fa fa-instagram"></i> silambarasan_kumar_</li>
-              <li><i class="fa fa-envelope-o"></i> contactsilambarasankumar@gmail.com</li>
+              <li><i class="fa fa-envelope-o"></i> silambured@gmail.com</li>
             </ul>
 
           <h2>Follow Me</h2>
@@ -340,7 +341,7 @@
           </div>
         </div>
         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-          <p class="text-center wow fadeInUp animated" data-wow-delay=".8s">Developed By <a href="https://www.instagram.com/silambarasan_kumar_/">Simbu.WebWorks</a></p>
+          <p class="text-center wow fadeInUp animated" data-wow-delay=".8s">Developed By <a href="https://www.instagram.com/silambarasan_kumar_/">SIMBU WEBWORKS</a></p>
         </div>
       </div>
     </div>
